MatrixLanding/netPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-landing-page-networkpolicy
spec:
  podSelector:
    matchLabels:
      matrix-service: webclient
  egress:
    # Allow all egress
    # - {}

    # Allow egress only to public networks
    # - to:
    #   - ipBlock:
    #       cidr: 0.0.0.0/0
    #       except:
    #         - 10.0.0.0/8
    #         - 172.16.0.0/12
    #         - 192.168.0.0/16

  ingress:

  # - from:
  #   - namespaceSelector:
  #       matchLabels:
  #         ns-name: <NS>
  #     podSelector:
  #       matchLabels:
  #         podDomain: <reverseProxyPodLabel>
  #   ports:
  #   - protocol: TCP
  #     port: 80

  policyTypes:
    - Ingress
    - Egress
